--- a/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore-content.Rmd
+++ b/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore-content.Rmd
@@ -43,6 +43,7 @@ You can follow either the R or Python code throughout this tutorial.
 
 ```{r setup, include=FALSE}
 library(reticulate)
+knitr::opts_chunk$set(dev="png")
 ```
 
 ## Set up: Install Packages {.tabset}
@@ -233,7 +234,7 @@ data in more depth, see the <a href="https://www.neonscience.org/resources/learn
 
 #### R
 
-```{r plot-par, eval=TRUE}
+```{r plot-par, dpi=36, eval=TRUE}
 
 plot(PARMean~endDateTime, 
      data=par30[which(par30$verticalPosition=="080"),],
@@ -243,7 +244,7 @@ plot(PARMean~endDateTime,
 
 #### Python
 
-```{python p-plot-par, eval=TRUE}
+```{python p-plot-par, dpi=36, eval=TRUE}
 
 par30top = par30[par30.verticalPosition=="080"]
 fig, ax = plt.subplots()
@@ -264,7 +265,7 @@ plot.
 
 #### R
 
-```{r plot-par-lower, eval=TRUE}
+```{r plot-par-lower, dpi=36, eval=TRUE}
 
 plot(PARMean~endDateTime, 
      data=par30[which(par30$verticalPosition=="080"),],
@@ -278,7 +279,7 @@ lines(PARMean~endDateTime,
 
 #### Python
 
-```{python p-plot-par-lower, eval=TRUE}
+```{python p-plot-par-lower, dpi=36, eval=TRUE}
 
 par30low = par30[par30.verticalPosition=="020"]
 fig, ax = plt.subplots()
@@ -620,7 +621,7 @@ subset to only the carbon isotope analyte:
 
 #### R
 
-```{r 13C-by-site, message=FALSE, warning=FALSE}
+```{r 13C-by-site, dpi=36, message=FALSE, warning=FALSE}
 
 boxplot(analyteConcentration~siteID, 
         data=apl_plantExternalLabDataPerSample, 
@@ -631,7 +632,7 @@ boxplot(analyteConcentration~siteID,
 
 #### Python
 
-```{python p-13C-by-site, message=FALSE, warning=FALSE}
+```{python p-13C-by-site, dpi=36, message=FALSE, warning=FALSE}
 
 apl13C = apl_plantExternalLabDataPerSample[
          apl_plantExternalLabDataPerSample.analyte=="d13C"]
@@ -680,7 +681,7 @@ par(mar=c(12,4,0.25,1))
 
 ```
 
-```{r plot-13C-by-tax, eval=TRUE}
+```{r plot-13C-by-tax, dpi=36, eval=TRUE}
 
 boxplot(analyteConcentration~scientificName, 
         data=apct, subset=analyte=="d13C", 
@@ -708,7 +709,7 @@ apct = pd.merge(apl_biomass,
 Using the merged data, now we can plot carbon isotope ratio 
 for each taxon.
 
-```{python p-plot-13C-by-tax, eval=TRUE}
+```{python p-plot-13C-by-tax, dpi=36, eval=TRUE}
 
 apl13Cspp = apct[apct.analyte=="d13C"]
 grouped = apl13Cspp.groupby("scientificName")["analyteConcentration"]
@@ -825,7 +826,7 @@ par(mar=c(5,4,4,1))
 
 ```
 
-```{r plot-aop, eval=TRUE}
+```{r plot-aop, dpi=36, eval=TRUE}
 
 plot(chm, col=topo.colors(6))
 
@@ -833,7 +834,7 @@ plot(chm, col=topo.colors(6))
 
 #### Python
 
-```{python p-plot-aop, eval=TRUE}
+```{python p-plot-aop, dpi=36, eval=TRUE}
 
 plt.imshow(chm.read(1))
 plt.show()
