fix typos, remove warning output

--- a/tutorials/Python/AOP/Lidar/uncertainty-and-validation/lidar_uncertainty/lidar_uncertainty.ipynb
+++ b/tutorials/Python/AOP/Lidar/uncertainty-and-validation/lidar_uncertainty/lidar_uncertainty.ipynb
@@ -187,22 +187,6 @@
     "Use `rio.open` to read in the datasets."
    ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "75e1f37f-fa50-4f26-9a97-80c4d3f6c7af",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CPLE_AppDefined in C:/Users/bhass/Downloads/DP3.30015.001/neon-aop-products/2016/FullSite/D11/2016_PRIN_1/L3/DiscreteLidar/CanopyHeightModelGtif/NEON_D11_PRIN_DP3_607000_3696000_CHM.tif: TIFFReadDirectoryCheckOrder:Invalid TIFF directory; tags are not sorted in ascending order\n",
-      "CPLE_AppDefined in C:/Users/bhass/Downloads/DP3.30024.001/neon-aop-products/2016/FullSite/D11/2016_PRIN_1/L3/DiscreteLidar/DSMGtif/NEON_D11_PRIN_DP3_607000_3696000_DSM.tif: TIFFReadDirectoryCheckOrder:Invalid TIFF directory; tags are not sorted in ascending order\n",
-      "CPLE_AppDefined in C:/Users/bhass/Downloads/DP3.30015.001/neon-aop-products/2016/FullSite/D11/2016_PRIN_2/L3/DiscreteLidar/CanopyHeightModelGtif/NEON_D11_PRIN_DP3_607000_3696000_CHM.tif: TIFFReadDirectoryCheckOrder:Invalid TIFF directory; tags are not sorted in ascending order\n",
-      "CPLE_AppDefined in C:/Users/bhass/Downloads/DP3.30024.001/neon-aop-products/2016/FullSite/D11/2016_PRIN_2/L3/DiscreteLidar/DSMGtif/NEON_D11_PRIN_DP3_607000_3696000_DSM.tif: TIFFReadDirectoryCheckOrder:Invalid TIFF directory; tags are not sorted in ascending order\n"
-     ]
-    }
    ],
    "source": [
     "chm1_dataset = rio.open(chm1_fname)\n",
@@ -383,7 +367,7 @@
    "id": "modular-disabled",
    "metadata": {},
    "source": [
-    "The histogram shows a wide variation in DSM differences, with those at the 95% limit at around +/- 1.5 m. Let's take a look at the spatial distribution of the errors by plotting a map of the difference between the two DSMs. Here we'll also use the extra variable in the plot function to constrain the limits of the colorbar to 95% of the observations. "
+    "The histogram shows a wide variation in DSM differences, with those at the 95% limit at around +/- 1.5 m. Let's take a look at the spatial distribution of the errors by plotting a map of the difference between the two DSMs. Here we'll also use the `vmin` and `vmax` variables in the plot function to constrain the limits of the colorbar to 95% of the observations. "
    ]
   },
   {
@@ -505,7 +489,7 @@
    "source": [
     "The overall magnitude of differences are smaller than in the DSM but the same spatial pattern of the error is evident. \n",
     "\n",
-    "Now, we'll plot the Canopy Height Model (CHM) of the same area. In the CHM, the tree heights above ground are represented, with all ground pixels having zero elevation. This time we'll use a colorbar which shows the ground as light green and the highest vegetation as dark green. We can set the lower limit of the color bar to zero and the upper limit to the mean canopy height to get a good color variation. "
+    "Now, we'll plot the Canopy Height Model (CHM) of the same area. In the CHM, the tree heights above ground are represented, with all ground pixels having zero elevation. This time we'll use a colorbar which shows the ground as light green and the highest vegetation as dark green. "
    ]
   },
   {
@@ -539,7 +523,7 @@
    "source": [
     "From the CHM, it appears the spatial distribution of error patterns follow the location of vegetation. \n",
     "\n",
-    "Now let's isolate only the pixels in the difference DSM that correspond to vegetation location, calcualte the mean and standard deviation and plot the associated histogram. Before displaying the histogram, we'll remove the no data values from the difference DSM and the non-zero pixels from the CHM. To keep the number of elements the same in each vector to allow element-wise logical operations in Python, we have to remove the difference DSM no data elements from the CHM array as well. "
+    "Now let's isolate only the pixels in the difference DSM that correspond to vegetation location, calculate the mean and standard deviation and plot the associated histogram. Before displaying the histogram, we'll remove the no data values from the difference DSM and the non-zero pixels from the CHM. To keep the number of elements the same in each vector to allow element-wise logical operations in Python, we have to remove the difference DSM no data elements from the CHM array as well. "
    ]
   },
   {
@@ -602,7 +586,7 @@
    "source": [
     "The results show a similar mean difference of near zero, but an extremely high standard deviation of 1.381 m! Since the DSM represents the top of the tree canopy, this provides the level of uncertainty we can expect in the canopy height in forests characteristic of the PRIN site using NEON LiDAR data. \n",
     "\n",
-    "Next we'll calculate the statistics and plot the histogram of the DTM vegetated areas"
+    "Next we'll calculate the statistics and plot the histogram of the DTM vegetated areas."
    ]
   },
   {
@@ -668,7 +652,7 @@
    "id": "empirical-processing",
    "metadata": {},
    "source": [
-    "Although the variation is reduced, it is still larger than expected for LiDAR. This is because under vegetation there may not be much laser energy reaching the ground, and those points that do may return with lower signal. The sparsity of points leads to surface interpolation over larger areas which can miss variations in the topography. Since the distribution of LIDAR and their location varied for each day, this resulted in different terrain representations and a uncertianty in the ground surface. This shows that the accuracy of LiDAR DTMs is reduced when under vegetation.\n",
+    "Although the variation is reduced, it is still larger than expected for LiDAR. This is because under vegetation there may not be much laser energy reaching the ground, and the points that do reach the ground may return with lower signal. The sparsity of points leads to surface interpolation over larger distances which can miss variations in the topography. Since the distribution of LIDAR points and their position varied for each day, this resulted in different terrain representations and a uncertianty in the ground surface. This shows that the accuracy of LiDAR DTMs is reduced when vegetation is present.\n",
     "\n",
     "Finally, let's look at the DTM difference on only the ground points (where CHM = 0)."
    ]
@@ -726,9 +710,9 @@
    "id": "romance-university",
    "metadata": {},
    "source": [
-    "In the open ground scenario we are able to produce the error chatracteristics we expect with a mean difference of only 0.011 m and a variation of 0.068 m. \n",
+    "In the open ground, we are able to see the error characteristics we expect with a mean difference of only 0.011 m and a variation of 0.068 m. \n",
     "\n",
-    "This shows that the uncertainty we expect in the NEON LiDAR system (~0.15 m) is only valid in bare, open, hard surface scenarios. We cannot expect the accuracy of the LiDAR to reach this level when vegetation is present. Quantifying the top of the canopy is particularly difficult and can lead to uncertainty in excess of 1 m for any given pixel.  "
+    "This shows that the uncertainty we expect in the NEON LiDAR system (~0.15 m) is only valid in bare, open, hard surfaces. We cannot expect the accuracy of the LiDAR to reach this level when vegetation is present. Quantifying the top of the canopy is particularly difficult and can lead to uncertainty in excess of 1 m for any given pixel.  "
    ]
   }
  ],
