move to shorter folder name, add challenge question

--- a/tutorials/Python/AOP/Lidar/uncertainty-validation/lidar_uncertainty/lidar_uncertainty.ipynb
+++ b/tutorials/Python/AOP/Lidar/uncertainty-validation/lidar_uncertainty/lidar_uncertainty.ipynb
@@ -28,7 +28,7 @@
    "id": "scheduled-peter",
    "metadata": {},
    "source": [
-    "In this exercise we will analyze several NEON Level-3 lidar rasters (DSM, DTM, and CHM) and assess the uncertainty between data colleced over the same area on different days. \n",
+    "In this exercise we will analyze several NEON Level-3 lidar rasters (DSM, DTM, and CHM) and assess the uncertainty between data collected over the same area on different days. \n",
     "\n",
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
@@ -39,7 +39,7 @@
     "* Difference the tif files\n",
     "* Create histograms of the DSM, DTM, and CHM differences\n",
     "* Remove vegetated areas of DSM & DTMs using the CHM\n",
-    "* Compare difference in DSM and DTMS over vegetated and ground pixels\n",
+    "* Compare difference in DSM and DTMs over vegetated and ground pixels\n",
     "\n",
     "### Install Python Packages\n",
     "\n",
@@ -192,8 +192,7 @@
    "execution_count": 4,
    "id": "75e1f37f-fa50-4f26-9a97-80c4d3f6c7af",
    "metadata": {},
-   "outputs": [
-   ],
+   "outputs": [],
    "source": [
     "chm1_dataset = rio.open(chm1_fname)\n",
     "dsm1_dataset = rio.open(dsm1_fname)\n",
@@ -720,6 +719,39 @@
     "\n",
     "This shows that the uncertainty we expect in the NEON LiDAR system (~0.15 m) is only valid in bare, open, hard surfaces. We cannot expect the accuracy of the LiDAR to reach this level when vegetation is present. Quantifying the top of the canopy is particularly difficult and can lead to uncertainty in excess of 1 m for any given pixel.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "372ca2d9-2d93-4ca6-81c4-1eade8c3f11d",
+   "metadata": {},
+   "source": [
+    "<div id=\"ds-challenge\" markdown=\"1\">\n",
+    "\n",
+    "**Challenge: Repeat this uncertainty analysis on another NEON site**\n",
+    "\n",
+    "1. There are a number of other instances where AOP has flown repeat flights in short proximity (within a few days, to a few months apart). Try repeating this analysis for one of these sites, listed below:\n",
+    "\n",
+    "- 2017 SERC\n",
+    "- 2019 CHEQ\n",
+    "- 2020 CPER\n",
+    "- 2024 KONZ\n",
+    "\n",
+    "2. Repeat this analysis for a site that was flown twice in the same year, but with different lidar sensors (payloads).\n",
+    "- 2023 SOAP (Visit 6: Riegl Q780, Visit 7: Optech Galaxy Prime)\n",
+    "\n",
+    "Tip: You may wish to read this <a href=\"https://www.neonscience.org/about/faq\" target=\"_blank\">FAQ: Have AOP sensors changed over the years? How do different sensors affect the data?</a> This discusses the differences between lidar sensors that NEON AOP operates, and some of the implications for the data products derived from the lidar sensor.\n",
+    "\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2291d5e6-1f62-4055-af50-61cda99ef5ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
