--- a/tutorials/Python/AOP/Lidar/uncertainty-validation/lidar_uncertainty/lidar_uncertainty.ipynb
+++ b/tutorials/Python/AOP/Lidar/uncertainty-validation/lidar_uncertainty/lidar_uncertainty.ipynb
@@ -729,14 +729,14 @@
     "\n",
     "**Challenge: Repeat this uncertainty analysis on another NEON site**\n",
     "\n",
-    "1. There are a number of other instances where AOP has flown repeat flights in short proximity (within a few days, to a few months apart). Try repeating this analysis for one of these sites, listed below:\n",
+    "There are a number of other instances where AOP has flown repeat flights in short proximity (within a few days, to a few months apart). Try repeating this analysis for one of these sites, listed below:\n",
     "\n",
     "- 2017 SERC\n",
     "- 2019 CHEQ\n",
     "- 2020 CPER\n",
     "- 2024 KONZ\n",
     "\n",
-    "2. Repeat this analysis for a site that was flown twice in the same year, but with different lidar sensors (payloads).\n",
+    "Repeat this analysis for a site that was flown twice in the same year, but with different lidar sensors (payloads).\n",
     "- 2023 SOAP (Visit 6: Riegl Q780, Visit 7: Optech Galaxy Prime)\n",
     "\n",
     "Tip: You may wish to read this <a href=\"https://www.neonscience.org/about/faq\" target=\"_blank\">FAQ: Have AOP sensors changed over the years? How do different sensors affect the data?</a> This discusses the differences between lidar sensors that NEON AOP operates, and some of the implications for the data products derived from the lidar sensor.\n",
